--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -110,6 +110,8 @@ booking_settings:
     activities: Gestión de actividades o eventos
     deposit_payment_group: Paga y señal
     total_payment_group: Total
+    product_allow_deposit: Permitir definir una fianza en los productos.
+    product_allow_deposit_description: Es un importe que se retiene al cliente en concepto de posibles daños sobre el producto. Se retorna al realizar la devolución del producto en buen estado
     deposit: "% de paga y señal sobre el total de la reserva"
     deposit_description: En el caso de que se quiera permitir recibir una cantidad en concepto de paga y señal, indicar el porcentaje. Utilizar 0 si sólo se desea recibir el pago total.
     deposit_includes_product_deposit: "La paga y señal incluye la fianza"
@@ -257,7 +259,7 @@ booking_console:
   activities_occupation: Ocupación
   activities_schedule: Agenda
   activities_summary: Programadas
-  pending_confirmation_activities: Pendientes conf.
+  pending_confirmation_activities: Pendientes confirmar
   today_activities: En curso (previstas hoy)
   crm: CRM
   finances: Finanzas
@@ -291,21 +293,24 @@ booking_console:
   products_billing: Facturación stock
   extras_billing: Facturación extras  
   information_requests: Solicitudes información
-  report_pending_confirmation: Pendientes conf.
+  report_pending_confirmation: Pendientes
   report_in_progress: En curso
   report_pickup_return: Entregas y devoluciones
   report_stock: Stock
   report_reservations: Reservas
   report_resource_reservations: Reservas por recurso
-  report_customer_reservations: Reservas (cliente)
   report_prereservations: Prereservas
-  report_picked_up_products: Productos entregados
-  report_finances_finished_reservations: Reservas finalizadas (finanzas)
-  activities_report: Actividades  
+  report_picked_up_products: Informe policía
+  report_finances_finished_reservations: Devoluciones
+  activities_report: Actividades
   report_customers: Clientes
   journal: Diario
   rental_locations: Oficinas
   media_settings: Medios
+report_picked_up_products:
+  title: Informe policía
+report_finances_finished_reservations:
+  title: Devoluciones
 booking_console_restaurant:
   table_types: Tipos de mesa 
   tables: Mesas
