--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -125,11 +125,17 @@ booking_settings:
     allow_total_payment: Permitir pagar el total de la reserva
     min_days: Numero mínimo de días
     min_days_description: Permite indicar el número mínimo de días que se puede alquilar un producto
+    hours_cadence: Horas de cadencia (tarifa)
+    hours_cadence_description: Número de horas que exceden de las 24 horas para considerar que se ha de aplicar un día más a la hora de calcular la tarifa
     family: Tipo de producto en alquiler
     family_description: El sistema está preparado para la gestión de determinados negocios en función del producto que alquilan.
     custom_pickup_return_place: Permitir otros lugares de entrega/devolución
     custom_pickup_return_place_price: Precio otro lugar de entrega/devolución
     no_pickup_return_timetable: No aplica
+    pickup_return_main_season: Horario base
+    pickup_return_out_of_season: Horario fuera de temporada
+    pickup_return_main_season_from: Desde
+    pickup_return_main_season_to: Hasta
     pickup_return_timetable: Horario entrega/devolución
     pickup_return_timetable_description: Permite indicar el horario de entrega/devolución
     pickup_return_timetable_out_price: Precio entrega/devolución fuera de horas
